--- a/app/views/bancos/_form.html.erb
+++ b/app/views/bancos/_form.html.erb
@@ -13,6 +13,7 @@
   </div>
   </div>
   <div class="actions">
+    <input type="button" onclick="location.href='<%= bancos_path %>'" value="<%= t('banco.new.back_link_label') %>" />
     <%= f.submit %>
   </div>
 <% end %>
