--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -9,6 +9,7 @@
   </div>
   </div>
   <div class="actions">
+    <input type="button" onclick="location.href='<%= clientes_path %>'" value="<%= t('cliente.new.back_link_label') %>" />
     <%= f.submit %>
   </div>
 <% end %>
