--- a/app/views/despesas/_form.html.erb
+++ b/app/views/despesas/_form.html.erb
@@ -17,6 +17,7 @@
   </div>
   </div>
   <div class="actions">
+    <input type="button" onclick="location.href='<%= despesas_path %>'" value="<%= t('socio.new.back_link_label') %>" />
     <%= f.submit %>
   </div>
 <% end %>
