--- a/app/views/relatorios/index.html.erb
+++ b/app/views/relatorios/index.html.erb
@@ -1,1 +1,2 @@
 <h1><%= t('relatorio.index.title') %></h1>
+<%= render 'shared/buttons', :buttons => [{:link => relatorios_operacoes_path, :image => 'home.png', :label => 'Operações financeiras'}] %>
