--- a/app/views/socios/_form.html.erb
+++ b/app/views/socios/_form.html.erb
@@ -8,8 +8,8 @@
     <%= f.text_field :nome %>
   </div>
   <div class="field">
-    <%= f.label :percentual %><br />
-    <%= f.text_field :percentual %>
+    <%= f.label :capital %><br />
+    <%= f.text_field :capital %>
   </div>
   <div class="field">
     <%= f.label :cpf %><br />
