--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -1,10 +1,11 @@
-<p id="notice"><%= notice %></p>
-
+<div class="box-left">
 <p>
   <b>Nome:</b>
   <%= @cliente.nome %>
 </p>
+</div>
+<br />
+<input type="button" onclick="location.href='<%= edit_cliente_path(@cliente) %>'" value="<%= t('cliente.show.edit_link_label') %>" />
+<input type="button" onclick="location.href='<%= clientes_path %>'" value="<%= t('cliente.show.back_link_label') %>" />
 
 
-<%= link_to t('cliente.show.edit_link_label'), edit_cliente_path(@cliente) %> |
-<%= link_to t('cliente.show.back_link_label'), clientes_path %>
