--- a/app/views/despesas/show.html.erb
+++ b/app/views/despesas/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<h1>Despesa</h1>
+<div class="box-left">
 
 <p>
   <b>Nome:</b>
@@ -14,7 +15,9 @@
   <b>Valor:</b>
   <%= @despesa.valor %>
 </p>
+</div>
 
+<br />
+<input type="button" onclick="location.href='<%= edit_despesa_path(@despesa) %>'" value="<%= t('despesa.show.edit_link_label') %>" />
+<input type="button" onclick="location.href='<%= despesas_path %>'" value="<%= t('despesa.show.back_link_label') %>" />
 
-<%= link_to 'Edit', edit_despesa_path(@despesa) %> |
-<%= link_to 'Back', despesas_path %>
