--- a/app/views/emitentes/index.html.erb
+++ b/app/views/emitentes/index.html.erb
@@ -1,13 +1,18 @@
 <h1><%= t('emitente.index.title') %></h1>
-
+<center>
+<div class="box-center">
 <%= form_tag emitentes_path, :method => 'get' do %>
   <p>
     <%= text_field_tag :nome, params[:nome] %>
     <%= submit_tag t('emitente.index.search_button_label'), :name => nil %>
   </p>
 <% end %>
+</div>
+</center>
 
-
+<div class="box-left">
+<div class="list">
+<center>
 <table>
   <tr>
     <th>Nome</th>
@@ -25,11 +30,14 @@
   </tr>
 <% end %>
 </table>
-
+</div>
+</div>
+</center>
 <br />
 
 <%= will_paginate @emitentes %>
 
 <br />
 
-<%= link_to t('emitente.index.new_button_label'), new_emitente_path %>
+<br />
+<input type="button" onclick="location.href='<%= new_emitente_path %>'" value="<%= t('emitente.index.new_button_label') %>" />
