--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -5,7 +5,8 @@
   <div class="box-left">
   <div class="field">
     <%= f.label :nome %><br />
-    <%= f.text_field :nome %>
+    <%= f.text_field(:nome,  {:required => 'required'}) %> 
+    <p class="hint"><%= t('cliente.form.nome.hint') %></p>
   </div>
   </div>
   <div class="actions">
