--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -2,7 +2,8 @@
 
 <%= render 'shared/buttons', :buttons => [
     {:link => cheques_path, :image => 'cheque.png', :label => 'Cheques'},
-    {:link => despesas_path, :image => 'despesa.png', :label => 'Despesas'},
+    {:link => despesas_path, :image => 'despesa.png', :label => 'Grupos de despesas'},
+    {:link => items_path, :image => 'despesa.png', :label => 'Ítens de despesa'},
     {:link => bancos_path, :image => 'banco.png', :label => 'Bancos'},
     {:link => relatorios_path, :image => 'relatorio.png', :label => 'Relatórios'}
     ] %>
