--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,8 @@
 	    <a class="dock-item2" href="<%= clientes_path %>"><span>Clientes</span><%= image_tag 'cliente.png' %></a> 
 	    <a class="dock-item2" href="<%= emitentes_path %>"><span>Emitentes</span><%= image_tag 'emitente.png' %></a> 
 	    <a class="dock-item2" href="<%= socios_path %>"><span>Sócios</span><%= image_tag 'socio.png' %></a> 
-	    <a class="dock-item2" href="<%= despesas_path %>"><span>Despesas</span><%= image_tag 'despesa.png' %></a> 
+	    <a class="dock-item2" href="<%= despesas_path %>"><span>Grupos de despesas</span><%= image_tag 'despesa.png' %></a>
+	    <a class="dock-item2" href="<%= items_path %>"><span>Ítens de despesa</span><%= image_tag 'despesa.png' %></a>  
 	    <a class="dock-item2" href="<%= relatorios_path %>"><span>Relatórios</span><%= image_tag 'relatorio.png' %></a> 
 	    <a class="dock-item2" href="<%= logout_path %>"><span>Sair</span><%= image_tag 'sair.png' %></a> 
     </div>
