--- a/app/views/socios/show.html.erb
+++ b/app/views/socios/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <b>Percentual:</b>
-  <%= @socio.percentual %>
+  <%= number_to_percentage @socio.percentual, :precision => 0 %>
 </p>
 
 <p>
