--- a/app/views/emitentes/_form.html.erb
+++ b/app/views/emitentes/_form.html.erb
@@ -11,6 +11,6 @@
   </div>
   <div class="actions">
     <input type="button" onclick="location.href='<%= emitentes_path %>'" value="<%= t('emitente.new.back_link_label') %>" />
-    <%= f.submit %>
+    <%= f.submit :value => 'Salvar' %>
   </div>
 <% end %>
