--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,7 @@
   <title>Factory</title>
   <%= stylesheet_link_tag  "style", :media => "all" %>
   <%= stylesheet_link_tag  "jquery-ui-1.8.21.custom", :media => "all" %>
-  <%= javascript_include_tag "jquery" %>
-  <%= javascript_include_tag "interface" %>
-  <%= javascript_include_tag "jquery-ui-1.8.21.custom.min.js" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <script type="text/javascript">
     $(document).ready(function(){
