--- a/app/views/socios/index.html.erb
+++ b/app/views/socios/index.html.erb
@@ -31,7 +31,7 @@
     <td><%= socio.cpf %></td>
     <td><%= link_to t('socio.index.show_link_label'), socio %></td>
     <td><%= link_to t('socio.index.edit_link_label'), edit_socio_path(socio) %></td>
-    <td><%= link_to t('socio.index.destroy_link_label'), socio, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+    <td><%= link_to t('socio.index.destroy_link_label'), socio, :method => :delete, :data => { :confirm => t('general.are_you_rure') } %></td>
   </tr>
 <% end %>
 </table>
