Correções e novos recursos

--- a/app/views/calculadoras/show.html.erb
+++ b/app/views/calculadoras/show.html.erb
@@ -30,7 +30,7 @@
         </div>
         
         <div class="actions">
-            <%= submit_tag 'Calcular' %>
+            <button onclick="alert('Não implementado ainda.')">Calcular</button>
         </div>
       <% end %>
     </div>
