--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,6 +96,7 @@
     <div class="dock-container2">
         <a class="dock-item2" href="<%= home_path %>"><span>Início</span><%= image_tag 'home.png' %></a>
         <a class="dock-item2" href="<%= bancos_path %>"><span>Bancos</span><%= image_tag 'banco.png' %></a> 
+      <a class="dock-item2" href="<%= lote_cheques_path %>"><span>Lotes de cheques</span><%= image_tag 'lote_cheque.png' %></a> 
 	    <a class="dock-item2" href="<%= cheques_path %>"><span>Cheques</span><%= image_tag 'cheque.png' %></a> 
 	    <a class="dock-item2" href="<%= clientes_path %>"><span>Clientes</span><%= image_tag 'cliente.png' %></a> 
 	    <a class="dock-item2" href="<%= emitentes_path %>"><span>Emitentes</span><%= image_tag 'emitente.png' %></a> 
