--- a/app/views/relatorios/clientes.html.erb
+++ b/app/views/relatorios/clientes.html.erb
@@ -1,5 +1,27 @@
-<h1>Relatório de operações por cliente</h1>
+<h1>Relatório de operações para o cliente "<%= @cliente %>"</h1>
+<div class="box-left">
+<div class="list">
 <center>
-<%= image_tag 'construcao.png', {:width => '30%', :height => '30%'} %>
-<p>Em construção...</p>
+<table>
+  <tr>
+    <th>Data da ocorrência</th>
+    <th>Descrição</th>
+    <th>Tipo de operação</th>
+    <th>Sócio</th>
+    <th>Valor</th>
+  </tr>
+
+<% @operacao_financeiras.each do |operacao_financeira_array| %>
+  <% operacao_financeira_array.each do |operacao_financeira| %>
+  <tr>
+    <td><%= operacao_financeira.created_at %></td>
+    <td><%= operacao_financeira.descricao %></td>
+    <td><%= operacao_financeira.tipo_operacao_financeira %></td>
+    <td><%= operacao_financeira.socio %></td>    
+    <td><%= operacao_financeira.valor %></td>
+  </tr>
+  <% end %>
+<% end %>
+</table>
 </center>
+
