--- a/app/views/bancos/_form.html.erb
+++ b/app/views/bancos/_form.html.erb
@@ -22,6 +22,6 @@
   </div>
   <div class="actions">
     <input type="button" onclick="location.href='<%= bancos_path %>'" value="<%= t('banco.new.back_link_label') %>" />
-    <%= f.submit %>
+    <%= f.submit t('general.save') %>
   </div>
 <% end %>
