--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,7 +17,7 @@
   <tr>
     <td><%= item.despesa %></td>
     <td><%= item.vencimento %></td>
-    <td><%= number_to_currency item.valor %></td>    
+    <td><%= number_to_currency item.valor, :unit => money_symbol, :separator => money_separator, :delimiter => money_delimiter %></td>    
     <td><%= item.situacao_item %></td>    
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_item_path(item) %></td>
