--- a/app/views/lote_cheques/_form.html.erb
+++ b/app/views/lote_cheques/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
   <div class="actions">
     <input type="button" onclick="location.href='<%= lote_cheques_path %>'" value="Voltar" />
-    <%= f.submit %>
+    <%= f.submit t('general.save') %>
   </div>
 <% end %>
