--- a/app/views/ufs/_form.html.erb
+++ b/app/views/ufs/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.text_field :pais_dominio %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('general.save') %>
   </div>
 <% end %>
