--- a/app/views/calculadoras/create.js.erb
+++ b/app/views/calculadoras/create.js.erb
@@ -1,3 +1,3 @@
 $('#total').html('');
-$('#total').html('<%= number_to_currency @cheque.valor_pago_factory %>');
+$('#total').html('<%= number_to_currency @cheque.valor_pago_factory, :unit => money_symbol, :separator => money_separator, :delimiter => money_delimiter %>');
 
