--- a/app/views/cheques/_form.html.erb
+++ b/app/views/cheques/_form.html.erb
@@ -90,7 +90,7 @@
   
   <div class="actions">
     <input type="button" onclick="location.href='<%= cheques_path %>'" value="<%= t('cheque.new.back_link_label') %>" />
-    <%= f.submit %>
+    <%= f.submit t('general.save') %>
   </div>
   
 <% end %>
