--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_field :nome %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('general.save') %>
   </div>
 <% end %>
