--- a/app/views/despesas/_form.html.erb
+++ b/app/views/despesas/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="actions">
     <input type="button" onclick="location.href='<%= despesas_path %>'" value="<%= t('socio.new.back_link_label') %>" />
-    <%= f.submit :value => 'Salvar' %>
+    <%= f.submit :value => t('general.save') %>
   </div>  
 <% end %>
 
