--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -34,6 +34,6 @@
     <p class="hint"><%= t('item.form.tipo_despesa.hint') %></p>
   </div>  
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('general.save') %>
   </div>
 <% end %>
