--- a/app/views/socios/_form.html.erb
+++ b/app/views/socios/_form.html.erb
@@ -50,6 +50,6 @@
   </div>
   <div class="actions">
     <input type="button" onclick="location.href='<%= socios_path %>'" value="<%= t('socio.new.back_link_label') %>" />
-    <%= f.submit :value => 'Salvar'%>    
+    <%= f.submit :value => t('general.save') %>    
   </div>
 <% end %>
